added extra list lines

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li class="choice2"><a target="_blank" href="https://www.instagram.com/p/BxqmapvHmdy/"><img class="resize choice2" src="https://scontent-atl3-1.cdninstagram.com/vp/ea3cee6099a18e35e362be3c063b180e/5D78E2CD/t51.2885-15/e35/s1080x1080/59624596_400726987437416_6161644845972532702_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
           <li class="choice2"><a target="_blank" href="https://www.instagram.com/p/BxI-U-wHSgr/"><img class="resize choice2" src="https://scontent-atl3-1.cdninstagram.com/vp/c5996cb1e3ad11af78c47c4a783e5733/5D88521E/t51.2885-15/sh0.08/e35/s750x750/57187706_1084733695057255_865643179855864252_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
           <li class="choice2"><a target="_blank" href="https://www.instagram.com/p/BxIbxF8n5Xu/"><img class="resize choice2" src="https://scontent-atl3-1.cdninstagram.com/vp/fe52bc2468b411011a0ae51714fb9097/5D94729E/t51.2885-15/e35/s1080x1080/58409547_646739549073181_664827239541616046_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+          <li class="choice2"><a target="_blank" href=""><img class="resize choice2" src="" alt="random image"></a></li>
       </ul>
     </div>
 
