--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="footer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a target="_blank" href="https://www.instagram.com/thevegantarianchef/" class="fa fa-instagram"></a>
-  <p>All image credits to Elizabeth Buchanan</p>
+  <p>All image credits:&nbsp&nbspElizabeth Buchanan</p>
   <p>Site: &COPY; Matheus DaSilva</p>
   </div>
 </div>
