Fleshed out about page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My First Website</title>
+  <title>The Vegantarian Chef</title>
   <meta name="description" content="My First Website">
   <meta name="author" content="Matheus DaSilva">
 
