--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="con1 savory">
         <li><p class="description">Hashbrown Casserole</p><a target="_blank" href="https://www.instagram.com/p/BxtKvhLHJ7E/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/0596d64c3d7ffb94132b8d3f03a0fb01/5D8085BA/t51.2885-15/e35/s1080x1080/60724432_307282240219670_5111912683360240588_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
       </div>
-      <div class="con1 savory">  
+      <div class="con1 savory vegan">  
         <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BxqmapvHmdy/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/ea3cee6099a18e35e362be3c063b180e/5D78E2CD/t51.2885-15/e35/s1080x1080/59624596_400726987437416_6161644845972532702_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
       </div>
       <div class="con1 savory">
