--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <h1>The Vegantarian Chef</h1>
   </div>  
  
+<!-- Navigation -->
+
+  <div class="menu" title="This does nothing for now.">
+    <div class="bars">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+
+  </div>
  
  <!-- Checkboxes used to filter -->
  
@@ -38,61 +48,61 @@
     <div class="content">
       <ul id="imagefood"  class="result images">
         
-      <div class="con1 savory vegan">
-        <li><p class="description">Noodles</p><a target="_blank" href="https://www.instagram.com/p/Bx6EfYeHCD8/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/ebb74f6d027b6659ac72872a98d2c26e/5D962340/t51.2885-15/e35/s1080x1080/60788339_2111730582209162_4509828299824987175_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory vegan">
+        <li><p class="description">Beef Crumble Noodles</p><a target="_blank" href="https://www.instagram.com/p/Bx6EfYeHCD8/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/ebb74f6d027b6659ac72872a98d2c26e/5D962340/t51.2885-15/e35/s1080x1080/60788339_2111730582209162_4509828299824987175_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 sweet vegan">
-        <li><p class="description">Sopapillas</p><a target="_blank" href="https://www.instagram.com/p/BxyfCXsgbGw/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/2d7de015022819247302ea30f968e745/5D7D9FCA/t51.2885-15/sh0.08/e35/s750x750/59625883_324135331615030_4907829672260799292_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container sweet vegan">
+        <li><p class="description">Sopapillas</p><a target="_blank" href="https://www.instagram.com/p/BxyfCXsgbGw/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/2d7de015022819247302ea30f968e745/5D7D9FCA/t51.2885-15/sh0.08/e35/s750x750/59625883_324135331615030_4907829672260799292_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Hashbrown Casserole</p><a target="_blank" href="https://www.instagram.com/p/BxtKvhLHJ7E/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/0596d64c3d7ffb94132b8d3f03a0fb01/5D8085BA/t51.2885-15/e35/s1080x1080/60724432_307282240219670_5111912683360240588_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Hashbrown Casserole</p><a target="_blank" href="https://www.instagram.com/p/BxtKvhLHJ7E/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/0596d64c3d7ffb94132b8d3f03a0fb01/5D8085BA/t51.2885-15/e35/s1080x1080/60724432_307282240219670_5111912683360240588_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory vegan">  
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BxqmapvHmdy/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/ea3cee6099a18e35e362be3c063b180e/5D78E2CD/t51.2885-15/e35/s1080x1080/59624596_400726987437416_6161644845972532702_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory vegan">  
+        <li><p class="description">Dumplings</p><a target="_blank" href="https://www.instagram.com/p/BxqmapvHmdy/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/ea3cee6099a18e35e362be3c063b180e/5D78E2CD/t51.2885-15/e35/s1080x1080/59624596_400726987437416_6161644845972532702_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BxI-U-wHSgr/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/c5996cb1e3ad11af78c47c4a783e5733/5D88521E/t51.2885-15/sh0.08/e35/s750x750/57187706_1084733695057255_865643179855864252_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Sausage Dog</p><a target="_blank" href="https://www.instagram.com/p/BxI-U-wHSgr/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/c5996cb1e3ad11af78c47c4a783e5733/5D88521E/t51.2885-15/sh0.08/e35/s750x750/57187706_1084733695057255_865643179855864252_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory vegan">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BxIbxF8n5Xu/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/fe52bc2468b411011a0ae51714fb9097/5D94729E/t51.2885-15/e35/s1080x1080/58409547_646739549073181_664827239541616046_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory vegan">
+        <li><p class="description">Margherita Grilled Cheese Sandwich</p><a target="_blank" href="https://www.instagram.com/p/BxIbxF8n5Xu/"><img class="resize" src="https://scontent-atl3-1.cdninstagram.com/vp/fe52bc2468b411011a0ae51714fb9097/5D94729E/t51.2885-15/e35/s1080x1080/58409547_646739549073181_664827239541616046_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory vegan">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/ByLQBmjnTup/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/014fa5e6dafdbad0dd5bb922babfd6af/5D859034/t51.2885-15/sh0.08/e35/s750x750/60469272_1055986004610658_5392541247087735056_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory vegan">
+        <li><p class="description">Meal from <a target="_blank" href="http://www.floracoffeeandtea.com/">Flora Kitchenette</a></p><a target="_blank" href="https://www.instagram.com/p/ByLQBmjnTup/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/014fa5e6dafdbad0dd5bb922babfd6af/5D859034/t51.2885-15/sh0.08/e35/s750x750/60469272_1055986004610658_5392541247087735056_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 sweet vegan">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/ByMXmD3gVnp/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/deb185256c035e2254784310373412ee/5D9CA005/t51.2885-15/sh0.08/e35/s640x640/60629960_2274142532847586_5005820155929231070_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container sweet vegan">
+        <li><p class="description">Chocolate Cake w/ Strawberry Frosting</p><a target="_blank" href="https://www.instagram.com/p/ByMXmD3gVnp/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/deb185256c035e2254784310373412ee/5D9CA005/t51.2885-15/sh0.08/e35/s640x640/60629960_2274142532847586_5005820155929231070_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory vegan">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/ByNvcAJnywI/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/e23adf23b3bd31b7c8b8f8e322ac8648/5D79C097/t51.2885-15/sh0.08/e35/s640x640/61925745_342526189788240_8365981188991568382_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory vegan">
+        <li><p class="description">Chickpea Soup</p><a target="_blank" href="https://www.instagram.com/p/ByNvcAJnywI/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/e23adf23b3bd31b7c8b8f8e322ac8648/5D79C097/t51.2885-15/sh0.08/e35/s640x640/61925745_342526189788240_8365981188991568382_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BybSBVZgOmg/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/35ebf285d918133de36d4bb6000049a8/5D90C996/t51.2885-15/sh0.08/e35/s750x750/61828843_2341270489533307_171967154908731833_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Buffalo Cauliflower w/ Homemade Fries</p><a target="_blank" href="https://www.instagram.com/p/BybSBVZgOmg/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/35ebf285d918133de36d4bb6000049a8/5D90C996/t51.2885-15/sh0.08/e35/s750x750/61828843_2341270489533307_171967154908731833_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/BydDtE7A77Z/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/68d0a65c555287bf44da0a3e8cfe4d30/5D8DCFEE/t51.2885-15/sh0.08/e35/s750x750/61490054_480951862649578_1614615494321965916_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Avocado Bagel</p><a target="_blank" href="https://www.instagram.com/p/BydDtE7A77Z/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/68d0a65c555287bf44da0a3e8cfe4d30/5D8DCFEE/t51.2885-15/sh0.08/e35/s750x750/61490054_480951862649578_1614615494321965916_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 sweet vegan">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/Byd-9LQHiqe/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/b35690b5101fd4cb35c9d857eee02493/5D9125E5/t51.2885-15/e35/61588582_144006600045795_4965473648121340290_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container sweet vegan">
+        <li><p class="description">Chocolate Rice Krispy</p><a target="_blank" href="https://www.instagram.com/p/Byd-9LQHiqe/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/b35690b5101fd4cb35c9d857eee02493/5D9125E5/t51.2885-15/e35/61588582_144006600045795_4965473648121340290_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/Bygcpm1HCnr/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/89b770edd37b0491b65ca8a852908a36/5D7879CD/t51.2885-15/sh0.08/e35/s750x750/61227022_2357631234482262_4292646004495202274_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Mac & Cheese w/ Bacon</p><a target="_blank" href="https://www.instagram.com/p/Bygcpm1HCnr/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/89b770edd37b0491b65ca8a852908a36/5D7879CD/t51.2885-15/sh0.08/e35/s750x750/61227022_2357631234482262_4292646004495202274_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
-      <div class="con1 savory">
-        <li><p class="description">Text Goes Here</p><a target="_blank" href="https://www.instagram.com/p/Bynv1A-HDBO/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/2edcb08f57238f5bb2ddcec4834bd997/5D7C28C2/t51.2885-15/e35/s1080x1080/62248046_586803891728433_1596278441877242443_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="random image"></a></li>
+      <div class="container savory">
+        <li><p class="description">Kelp Noodles w/ Veggies</p><a target="_blank" href="https://www.instagram.com/p/Bynv1A-HDBO/"><img class="resize" src="https://scontent-ort2-2.cdninstagram.com/vp/2edcb08f57238f5bb2ddcec4834bd997/5D7C28C2/t51.2885-15/e35/s1080x1080/62248046_586803891728433_1596278441877242443_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" alt="Picture of Different Foods"></a></li>
       </div>
       
 <!--     These are extra lines for adding more food/recipes  
       <div class="what is it">
-        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="random image"></a></li>
+        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="Picture of Different Foods"></a></li>
       </div>
       <div class="what is it">
-        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="random image"></a></li>
+        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="Picture of Different Foods"></a></li>
       </div>
       <div class="what is it">
-        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="random image"></a></li>
+        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="Picture of Different Foods"></a></li>
       </div>
       <div class="what is it">
-        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="random image"></a></li>
+        <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="Picture of Different Foods"></a></li>
       </div> -->
 
         </ul>
@@ -106,7 +116,7 @@
   <div class="footer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a target="_blank" href="https://www.instagram.com/thevegantarianchef/" class="fa fa-instagram"></a>
-  <p>All image credits:&nbsp&nbspElizabeth Buchanan</p>
+  Picture of Different Foods credits:&nbsp&nbspElizabeth Buchanan</p>
   <p>Site: &COPY; Matheus DaSilva</p>
   </div>
 </div>
