Added tumblr link, fixed overlay problem on social media links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
   <div class="footer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a target="_blank" href="https://www.instagram.com/thevegantarianchef/" class="fa fa-instagram"></a>
-  Picture of Different Foods credits:&nbsp&nbspElizabeth Buchanan</p>
+  <link rel="stylesheet" href="https://img.icons8.com/metro/26/000000/tumblr.png">
+  <a target="_blank" href="https://thevegantarianchef.tumblr.com/" class="fa fa-tumblr"></a>
+  <br>
+  Picture credits:&nbsp&nbspElizabeth Buchanan</p>
   <p>Site: &COPY;  Matheus DaSilva</p>
   </div>
   
