--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div>
+<div class="main-container">
   <div class="header" id="myHeader">
   <h1>The Vegantarian Chef</h1>
   </div>  
