styled social links, added small easter egg

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
         <li><a target="_blank" href="link goes here"><img class="resize" src="Image Link goes here" alt="Picture of Different Foods"></a></li>
       </div> -->
 
+      <div class="savory sweet vegan hidden">
+        <li><a target="_blank"><img class="resize" src="https://pics.me.me/whoa-there-friendo-lets-calm-down-28966442.png" alt="This food doesn't exist!"></a></li>
+      </div>
         </ul>
     </div>
 
