--- a/about.html
+++ b/about.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="main-container">
     <div class="header" id="myHeader">
         <h1>About the Chef</h1>
     </div> 
     
     <div class="headshot clearfix">
-        <img class="headshotpic clearfix" src="./img/test.jpg">
+        <img class="headshotpic clearfix" src="./img/test.jpg" alt="Picture will go here">
     </div>
     
     <div class="about">
@@ -26,5 +27,6 @@
             <p>All image credits:&nbsp&nbspElizabeth Buchanan</p>
             <p>Site: &COPY; Matheus DaSilva</p>
     </div>
+</div>
 </body>
 </html>
