Changed from rel to data category in JS, and added more description to readme

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <div class="content">
     <h2 class="recipes">The Foods</h2>
     <div class="filter">
-      <label><input type="checkbox" rel="savory" onchange="change()"/>Savory</label>
-      <label><input type="checkbox" rel="sweet" onchange="change()" name="narrow" value="sweet">Sweet</label>
-      <label><input type="checkbox" rel="vegan" onchange="change()" name="narrow" value="vegan">Vegan</label>
+      <label><input type="checkbox" data-category="savory" onchange="change()"/>Savory</label>
+      <label><input type="checkbox" data-category="sweet" onchange="change()" name="narrow" value="sweet">Sweet</label>
+      <label><input type="checkbox" data-category="vegan" onchange="change()" name="narrow" value="vegan">Vegan</label>
     </div>
     <p>Click on a picture for more info!</p>
     
